--- a/gb/19/12/13/n11721543.md
+++ b/gb/19/12/13/n11721543.md
@@ -1,61 +1,58 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/fxikhp286/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/fxikhp286/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>´«Ïã¸ÛTVBÔÂµ×²ÃÔ±½üÇ§ ½ÚÄ¿ÖÆ×÷²¿Õ¼´óÍ·</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/07/190714080601100311-600x400.jpg" />
-<h6>¡°7.14¡±É³ÌïÇø¾Ù°ì·´ËÍÖÐ´óÓÎÐÐ£¬ÓÎÐÐÕß¿¹ÒéÏã¸ÛÎÞÏßTVB³öÂôÏã¸Û¡££¨ËÎ±ÌÁú/´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/eyk232/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/eyk232/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/eyk232/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/eyk232/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/eyk232/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä¼ é¦™æ¸¯TVBæœˆåº•è£å‘˜è¿‘åƒ èŠ‚ç›®åˆ¶ä½œéƒ¨å å¤§å¤´</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/190714080601100311-600x400.jpg" />
+<h6>â€œ7.14â€æ²™ç”°åŒºä¸¾åŠžåé€ä¸­å¤§æ¸¸è¡Œï¼Œæ¸¸è¡Œè€…æŠ—è®®é¦™æ¸¯æ— çº¿TVBå‡ºå–é¦™æ¸¯ã€‚ï¼ˆå®‹ç¢§é¾™/å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ14ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÙ¡Òà¼Ó×ÛºÏ±¨µ¼£©±»³ÆÎªÏã¸Û¡°ºìÃ½Ö®Ê×¡±µÄÎÞÏßÌ¨£¨TVB£©£¬ÒòÎªÔÚÏã¸Û¡°·´ËÍÖÐ¡±¡°·´¼«È¨¡±ÔË¶¯ÖÐµÄÐÂÎÅ±¨µ¼Æ«ÆÄ£¬ÉõÖÁ¿ÌÒâÄ¨ºÚ¿¹ÕùÃñÖÚ£¬Òý·¢ÊÐÃñ°Õ¿´¡¢¿Í»§µÖÖÆ£¬ÆäÊÕÊÓÂÊºÍ¹ã¸æÊÕÈë²»¶ÏÏÂµø¡£ÏÖ´«³ö¹ÜÀí²ãÎªËõ¼õ¿ªÖ§£¬±¾ÔÂµ×½«²ÃÔ±½üÇ§£¬ÆäÖÐÖÆ×÷²¿½«³ÉÖØÔÖÇø¡£</p>
-<p>¾ÝÏã¸Û¡¶Æ»¹ûÈÕ±¨¡·ÒýÊöµÄÏûÏ¢³Æ£¬ÓÐ½ü4,000ÃûÔ±¹¤µÄÏã¸ÛÎÞÏßÌ¨£¨TVB£©£¬±¾ÔÂµ×½«´ÇÍË800ÖÁ1,000ÈË£¬²ÃÔ±±ÈÀý½Ó½üËÄ·ÖÖ®Ò»¡£ÏûÏ¢»¹Ö¸£¬²ÃÔ±ÖØÔÖÇøÊÇÖÆ×÷²¿ºÍ×ÛÒÕ×é£¬ÆäËü²¿ÃÅÒ²»á°´±ÈÀý²Ã¼õÈËÊÖ£¬½ü60Ëê¼°¸ßÐ½Ò»×å¸üÊÇÖØµã²ÃÔ±¶ÔÏó¡£</p>
-<p>ÖÁÓÚÎªºÎ²ÃÔ±ÊýÁ¿Èç´ËÅÓ´ó£¬¾ÝTVBÖÆ×÷²¿ÈËÔ±Í¸Â¶£¬ÒòÊÕÒæ²»¶ÏÏÂµø£¬ÎÞÏß²»µÃ²»Ëõ¼õ¿ªÖ§£¬¾ö¶¨²»ÔÙÒÔ´«Í³·½Ê½¾­Óª¡£¶ø±¸ÊÜ¹Ø×¢µÄÊÇ£¬Ò»ÏòÈËÊýÖÚ¶àµÄÖÆ×÷²¿£¬¿ªÖ§¾Þ´ó£¬µ«½üÆÚTVB²»Ê±Íâ¹º¾ç¼¯ºÍ½ÚÄ¿£¬ÄÚ²¿ÖÆ×÷²»¶à£¬Òò´Ë²»ÉÙ¼àÖÆºÍµ¼ÑÝÔçÒÑ±»È°ÍËÀëÖ°¡£</p>
-<p>¸ÃÖªÇéÈËÊ¿½âÊÍ£¬TVB¹ÜÀí²ãÖ§³ÖÖÆ×÷²¿ºÍ×ÛÒÕ×é±»È°ÍËµÄ²¿·ÖÈËÔ±ÔÚÍâÃæ³ÉÁ¢×Ô¼ºµÄÖÆ×÷¹«Ë¾£¬ÈÕºóÎÞÏßÅÄ¾ç»òÅÄ×ÛÒÕ½ÚÄ¿£¬½«ÍâÅÐ¸øÕâÐ©¹«Ë¾ÖÆ×÷¡£ÎÞÏßÔçÇ°ÒÑÓÐ²¿·Ö¾ç¼¯½»ÓÉÍâÅÐ¹«Ë¾ÖÆ×÷£¬Ïàµ±ÓÚ±äÏàÑøÒ»ÅúÒÑ¾­ÀëÖ°µÄÔ±¹¤£¬Òò´Ë£¬´Ë´ÎÕæÕýÊ§ÒµµÄÔ±¹¤¹À¼ÆÓÐ400ÈË×óÓÒ¡£</p>
-<p>¾ÝÏã¸Û¡°Á¢³¡ÐÂÎÅ¡±ÔçÇ°±¨µ¼£¬±»³ÆÎª¡°CCTVB¡±£¨Ïã¸ÛÑëÊÓ£©µÄTVB£¬ÔÚ±¨µ¼Ïã¸Û¡°·´ËÍÖÐ¡±¡¢¡°·´¼«È¨¡±µÄÐÂÎÅÊ±´æÔÚÑÏÖØÆ«ÆÄ¡£Æä²»½öÑ¡ÔñÐÔ±¨µ¼Òý·¢ÖÚÅ­£¬¶øÇÒ»¹¿ÌÒâÄ¨ºÚ¿¹ÕùÃñÖÚµÄÐÐÎªÁîÈË·¢Ö¸¡£</p>
-<p>¸ÃÌ¨µÄÐÂÎÅÃ÷ÏÔµØµßµ¹ºÚ°×£¬»ìÏýÊÇ·Ç£¬½«ºÍÆ½¿¹ÕùµÄ¸ÛÈËËµ³É¡°±©Í½¡±£¬°ÑÀÄÊ©±©Á¦µÄ¾¯²ìÅõ³É¡°Ó¢ÐÛ¡±£¬»¹½«ºÚ¾¯ºÍºÚ°ïµÄ´ò¡¢ÔÒ¡¢ÇÀ¡¢ÉÕ¡¢¼é¡¢É±µÈ¶ñÐÐËµ³É¡°°®¹ú¡±¡£¸ÃÌ¨µÄÐÂÎÅ»¹Ìá¹©¸ø´óÁ¿µÄÖÐ¹²¹ÙÃ½×ª·¢£¬ÃÔ»óÁË´óÁ¿²»Ã÷ÕæÏàµÄ´óÂ½ÃñÖÚ£¬¿ÉÎ½ÒÅ»¼ÎÞÇî¡£</p>
-<p>Ãæ¶ÔÖÐ¹²ºìÃ½µÄÄ¨ºÚºÍ¾¯²ìµÄ²Ð±©ÕòÑ¹£¬¸ÛÈËÎ©Ò»ÄÜÒÀ¿¿µÄ¾ÍÊÇÍ¨¹ýÁ¼ÐÄÃ½ÌåµÄÏÖ³¡±¨µ¼£¬½«¡°·´ËÍÖÐ¡±¡°·´¼«È¨¡±µÄÕæÏà´ó°×ÓÚÌìÏÂ¡£</p>
-<p>¶ÔTVBµÄ½ÚÄ¿£¬²»½öÊÐÃñ°Õ¿´£¬ÉÌ¼ÒµÖÖÆ£¬¶øÇÒÒ²Ôâµ½TVBÄÚ²¿Ô±¹¤µÄÍÙÆú¡£¾ÝÔçÇ°±¨µ¼£¬TVBÐÂÎÅ²¿ÔÚ8ÔÂÖÐÑ®µÄÒ»ÖÜÄÚ£¬ÖÁÉÙÓÐ8Ãû¼ÇÕßÒò²»Âú¹«Ë¾µÄ×ö·¨¶ø²»Ô¼¶øÍ¬µØµÝ½»´ÇÖ°ÐÅ£¬±íÊ¾¡°²»Ô¸³öÂôÁ¼ÐÄ¡±¡£Ò²ÓÐÆäËü×éµÄ´óÔ¼20ÃûÔ±¹¤£¬Òò·¢±íÁ¦Í¦¡°·´ËÍÖÐ¡±ÑÔÂÛ£¬ÔÚ8ÔÂ24ÈÕÔâTVB½â¹Í¡£</p>
-<p>ÔÚÍøÃñµÄ¾Ñ»÷ÏÂ£¬¸÷´óÆ·ÅÆ·×·×ÔÝÍ£ÔÚTVBµÇ¹ã¸æ£¬¾Ý²»ÍêÈ«Í³¼Æ£¬ÖÁÉÙ°üÀ¨¡°±¦¿óÁ¦¡±¡¢¡°Pizza Hut¡±¡¢¡°ÏÈÊ©°Ù»õ¡±¡¢¡°Àî½¡¼ÝÊ»Ñ§Ôº¡±¡¢¡°»¯×±Æ·¹«Ë¾CLARINS¡±¡¢¡°Ñ©»¨Ðã¡±¡¢¡°ÐÅÅµ±£ÏÕ¡±¼°¡°Ð¯³ÌÂÃÓÎÍø£¨Trip.com£©¡±µÈ¡£ÓÐÏûÏ¢Ö¸£¬»¤ÀíÆ·ÅÆ¡°²Ê·áÐÐ¡±ÈÕÇ°Ò²±íÊ¾£¬±¾ÔÂµ×ºÏÔ¼½ìÂúºó£¬½«Ñ¡ÔñÆäËüÃ½ÌåÐû´«²úÆ·¡£</p>
-<p>½üÈÕ´«³öTVB´ó½µÊ¥µ®ÖÁÄêÎ²µÄÉÌ»§¹ã¸æ·Ñ¡£×îÐÂµÄÒ»·Ý¼ÛÄ¿±íÏÔÊ¾£¬ÓÐ±ðÓÚ¹ýÍùÃ¿ÄêÒªÇóÉÌ¼Ò¼Ó¼Û3%ÖÁ5%£¬»Æ½ðÊ±¶Î30Ãë¹ã¸æµÄ¡°¶¨Î»»ù±¾¼ÛÄ¿¡±Ë÷¼Û22.6Íò¸ÛÔª£¬×î¸ß´ï184¸ÛÍòÔª£¬½ñÄêÊ¥µ®½ÚÆÚ¼äÖ»ÐèÊ®¶àÍò±ã¿É½»Ò×£¬±ÈÈ¥ÄêÊ¥µ®Í¬ÆÚµÄ20Íò¸Û±ÒµÄÖÐÎ»Êý×Ö½µ¼Û½üËÄ³É¡£</p>
-<p>ÕýÖµTVBÊÆË¥Ö®¼Ê£¬ÔÚÎ»ËÄÄêµÄ³Â¹úÇ¿£¬Ê¢´«12ÔÂ13ÈÕÒÑ´ÇÈ¥TVB¶­ÊÂ¾ÖÖ÷Ï¯Ò»Ö°¡£Ðí¶àÍøÃñ±íÊ¾£º¡°TVBÍêÈ«ÊÇÏã¸ÛÈËµÄÒ»Ìõ»ö¸ù¡£¡±¡°¼ÌÐøµÖÖÆTVB£¬Ö±ÖÁËüÊÙÖÕÕýÇÞ£¡¡±</p>
-<p>ÔðÈÎ±à¼­£ºÒ¶×ÏÎ¢</p>
-
+	<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ14æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…ä½Ÿäº¦åŠ ç»¼åˆæŠ¥å¯¼ï¼‰è¢«ç§°ä¸ºé¦™æ¸¯â€œçº¢åª’ä¹‹é¦–â€çš„æ— çº¿å°ï¼ˆTVBï¼‰ï¼Œå› ä¸ºåœ¨é¦™æ¸¯â€œåé€ä¸­â€â€œåæžæƒâ€è¿åŠ¨ä¸­çš„æ–°é—»æŠ¥å¯¼åé¢‡ï¼Œç”šè‡³åˆ»æ„æŠ¹é»‘æŠ—äº‰æ°‘ä¼—ï¼Œå¼•å‘å¸‚æ°‘ç½¢çœ‹ã€å®¢æˆ·æŠµåˆ¶ï¼Œå…¶æ”¶è§†çŽ‡å’Œå¹¿å‘Šæ”¶å…¥ä¸æ–­ä¸‹è·Œã€‚çŽ°ä¼ å‡ºç®¡ç†å±‚ä¸ºç¼©å‡å¼€æ”¯ï¼Œæœ¬æœˆåº•å°†è£å‘˜è¿‘åƒï¼Œå…¶ä¸­åˆ¶ä½œéƒ¨å°†æˆé‡ç¾åŒºã€‚</p>
+<p>æ®é¦™æ¸¯ã€Šè‹¹æžœæ—¥æŠ¥ã€‹å¼•è¿°çš„æ¶ˆæ¯ç§°ï¼Œæœ‰è¿‘4,000åå‘˜å·¥çš„é¦™æ¸¯æ— çº¿å°ï¼ˆTVBï¼‰ï¼Œæœ¬æœˆåº•å°†è¾žé€€800è‡³1,000äººï¼Œè£å‘˜æ¯”ä¾‹æŽ¥è¿‘å››åˆ†ä¹‹ä¸€ã€‚æ¶ˆæ¯è¿˜æŒ‡ï¼Œè£å‘˜é‡ç¾åŒºæ˜¯åˆ¶ä½œéƒ¨å’Œç»¼è‰ºç»„ï¼Œå…¶å®ƒéƒ¨é—¨ä¹Ÿä¼šæŒ‰æ¯”ä¾‹è£å‡äººæ‰‹ï¼Œè¿‘60å²åŠé«˜è–ªä¸€æ—æ›´æ˜¯é‡ç‚¹è£å‘˜å¯¹è±¡ã€‚</p>
+<p>è‡³äºŽä¸ºä½•è£å‘˜æ•°é‡å¦‚æ­¤åºžå¤§ï¼Œæ®TVBåˆ¶ä½œéƒ¨äººå‘˜é€éœ²ï¼Œå› æ”¶ç›Šä¸æ–­ä¸‹è·Œï¼Œæ— çº¿ä¸å¾—ä¸ç¼©å‡å¼€æ”¯ï¼Œå†³å®šä¸å†ä»¥ä¼ ç»Ÿæ–¹å¼ç»è¥ã€‚è€Œå¤‡å—å…³æ³¨çš„æ˜¯ï¼Œä¸€å‘äººæ•°ä¼—å¤šçš„åˆ¶ä½œéƒ¨ï¼Œå¼€æ”¯å·¨å¤§ï¼Œä½†è¿‘æœŸTVBä¸æ—¶å¤–è´­å‰§é›†å’ŒèŠ‚ç›®ï¼Œå†…éƒ¨åˆ¶ä½œä¸å¤šï¼Œå› æ­¤ä¸å°‘ç›‘åˆ¶å’Œå¯¼æ¼”æ—©å·²è¢«åŠé€€ç¦»èŒã€‚</p>
+<p>è¯¥çŸ¥æƒ…äººå£«è§£é‡Šï¼ŒTVBç®¡ç†å±‚æ”¯æŒåˆ¶ä½œéƒ¨å’Œç»¼è‰ºç»„è¢«åŠé€€çš„éƒ¨åˆ†äººå‘˜åœ¨å¤–é¢æˆç«‹è‡ªå·±çš„åˆ¶ä½œå…¬å¸ï¼Œæ—¥åŽæ— çº¿æ‹å‰§æˆ–æ‹ç»¼è‰ºèŠ‚ç›®ï¼Œå°†å¤–åˆ¤ç»™è¿™äº›å…¬å¸åˆ¶ä½œã€‚æ— çº¿æ—©å‰å·²æœ‰éƒ¨åˆ†å‰§é›†äº¤ç”±å¤–åˆ¤å…¬å¸åˆ¶ä½œï¼Œç›¸å½“äºŽå˜ç›¸å…»ä¸€æ‰¹å·²ç»ç¦»èŒçš„å‘˜å·¥ï¼Œå› æ­¤ï¼Œæ­¤æ¬¡çœŸæ­£å¤±ä¸šçš„å‘˜å·¥ä¼°è®¡æœ‰400äººå·¦å³ã€‚</p>
+<p>æ®é¦™æ¸¯â€œç«‹åœºæ–°é—»â€æ—©å‰æŠ¥å¯¼ï¼Œè¢«ç§°ä¸ºâ€œCCTVBâ€ï¼ˆé¦™æ¸¯å¤®è§†ï¼‰çš„TVBï¼Œåœ¨æŠ¥å¯¼é¦™æ¸¯â€œåé€ä¸­â€ã€â€œåæžæƒâ€çš„æ–°é—»æ—¶å­˜åœ¨ä¸¥é‡åé¢‡ã€‚å…¶ä¸ä»…é€‰æ‹©æ€§æŠ¥å¯¼å¼•å‘ä¼—æ€’ï¼Œè€Œä¸”è¿˜åˆ»æ„æŠ¹é»‘æŠ—äº‰æ°‘ä¼—çš„è¡Œä¸ºä»¤äººå‘æŒ‡ã€‚</p>
+<p>è¯¥å°çš„æ–°é—»æ˜Žæ˜¾åœ°é¢ å€’é»‘ç™½ï¼Œæ··æ·†æ˜¯éžï¼Œå°†å’Œå¹³æŠ—äº‰çš„æ¸¯äººè¯´æˆâ€œæš´å¾’â€ï¼ŒæŠŠæ»¥æ–½æš´åŠ›çš„è­¦å¯Ÿæ§æˆâ€œè‹±é›„â€ï¼Œè¿˜å°†é»‘è­¦å’Œé»‘å¸®çš„æ‰“ã€ç ¸ã€æŠ¢ã€çƒ§ã€å¥¸ã€æ€ç­‰æ¶è¡Œè¯´æˆâ€œçˆ±å›½â€ã€‚è¯¥å°çš„æ–°é—»è¿˜æä¾›ç»™å¤§é‡çš„ä¸­å…±å®˜åª’è½¬å‘ï¼Œè¿·æƒ‘äº†å¤§é‡ä¸æ˜ŽçœŸç›¸çš„å¤§é™†æ°‘ä¼—ï¼Œå¯è°“é—æ‚£æ— ç©·ã€‚</p>
+<p>é¢å¯¹ä¸­å…±çº¢åª’çš„æŠ¹é»‘å’Œè­¦å¯Ÿçš„æ®‹æš´é•‡åŽ‹ï¼Œæ¸¯äººæƒŸä¸€èƒ½ä¾é çš„å°±æ˜¯é€šè¿‡è‰¯å¿ƒåª’ä½“çš„çŽ°åœºæŠ¥å¯¼ï¼Œå°†â€œåé€ä¸­â€â€œåæžæƒâ€çš„çœŸç›¸å¤§ç™½äºŽå¤©ä¸‹ã€‚</p>
+<p>å¯¹TVBçš„èŠ‚ç›®ï¼Œä¸ä»…å¸‚æ°‘ç½¢çœ‹ï¼Œå•†å®¶æŠµåˆ¶ï¼Œè€Œä¸”ä¹Ÿé­åˆ°TVBå†…éƒ¨å‘˜å·¥çš„å”¾å¼ƒã€‚æ®æ—©å‰æŠ¥å¯¼ï¼ŒTVBæ–°é—»éƒ¨åœ¨8æœˆä¸­æ—¬çš„ä¸€å‘¨å†…ï¼Œè‡³å°‘æœ‰8åè®°è€…å› ä¸æ»¡å…¬å¸çš„åšæ³•è€Œä¸çº¦è€ŒåŒåœ°é€’äº¤è¾žèŒä¿¡ï¼Œè¡¨ç¤ºâ€œä¸æ„¿å‡ºå–è‰¯å¿ƒâ€ã€‚ä¹Ÿæœ‰å…¶å®ƒç»„çš„å¤§çº¦20åå‘˜å·¥ï¼Œå› å‘è¡¨åŠ›æŒºâ€œåé€ä¸­â€è¨€è®ºï¼Œåœ¨8æœˆ24æ—¥é­TVBè§£é›‡ã€‚</p>
+<p>åœ¨ç½‘æ°‘çš„ç‹™å‡»ä¸‹ï¼Œå„å¤§å“ç‰Œçº·çº·æš‚åœåœ¨TVBç™»å¹¿å‘Šï¼Œæ®ä¸å®Œå…¨ç»Ÿè®¡ï¼Œè‡³å°‘åŒ…æ‹¬â€œå®çŸ¿åŠ›â€ã€â€œPizza Hutâ€ã€â€œå…ˆæ–½ç™¾è´§â€ã€â€œæŽå¥é©¾é©¶å­¦é™¢â€ã€â€œåŒ–å¦†å“å…¬å¸CLARINSâ€ã€â€œé›ªèŠ±ç§€â€ã€â€œä¿¡è¯ºä¿é™©â€åŠâ€œæºç¨‹æ—…æ¸¸ç½‘ï¼ˆTrip.comï¼‰â€ç­‰ã€‚æœ‰æ¶ˆæ¯æŒ‡ï¼ŒæŠ¤ç†å“ç‰Œâ€œå½©ä¸°è¡Œâ€æ—¥å‰ä¹Ÿè¡¨ç¤ºï¼Œæœ¬æœˆåº•åˆçº¦å±Šæ»¡åŽï¼Œå°†é€‰æ‹©å…¶å®ƒåª’ä½“å®£ä¼ äº§å“ã€‚</p>
+<p>è¿‘æ—¥ä¼ å‡ºTVBå¤§é™åœ£è¯žè‡³å¹´å°¾çš„å•†æˆ·å¹¿å‘Šè´¹ã€‚æœ€æ–°çš„ä¸€ä»½ä»·ç›®è¡¨æ˜¾ç¤ºï¼Œæœ‰åˆ«äºŽè¿‡å¾€æ¯å¹´è¦æ±‚å•†å®¶åŠ ä»·3%è‡³5%ï¼Œé»„é‡‘æ—¶æ®µ30ç§’å¹¿å‘Šçš„â€œå®šä½åŸºæœ¬ä»·ç›®â€ç´¢ä»·22.6ä¸‡æ¸¯å…ƒï¼Œæœ€é«˜è¾¾184æ¸¯ä¸‡å…ƒï¼Œä»Šå¹´åœ£è¯žèŠ‚æœŸé—´åªéœ€åå¤šä¸‡ä¾¿å¯äº¤æ˜“ï¼Œæ¯”åŽ»å¹´åœ£è¯žåŒæœŸçš„20ä¸‡æ¸¯å¸çš„ä¸­ä½æ•°å­—é™ä»·è¿‘å››æˆã€‚</p>
+<p>æ­£å€¼TVBåŠ¿è¡°ä¹‹é™…ï¼Œåœ¨ä½å››å¹´çš„é™ˆå›½å¼ºï¼Œç››ä¼ 12æœˆ13æ—¥å·²è¾žåŽ»TVBè‘£äº‹å±€ä¸»å¸­ä¸€èŒã€‚è®¸å¤šç½‘æ°‘è¡¨ç¤ºï¼šâ€œTVBå®Œå…¨æ˜¯é¦™æ¸¯äººçš„ä¸€æ¡ç¥¸æ ¹ã€‚â€â€œç»§ç»­æŠµåˆ¶TVBï¼Œç›´è‡³å®ƒå¯¿ç»ˆæ­£å¯ï¼â€</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå¶ç´«å¾®</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/13/n11721543.htm">´«Ïã¸ÛTVBÔÂµ×²ÃÔ±½üÇ§ ½ÚÄ¿ÖÆ×÷²¿Õ¼´óÍ·</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/12/n11380698.htm">Ïã¸ÛTVB±¨µ¼Æ«ÆÄ Ê®ÉÌ¼Ò³·¹ã¸æ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/4/25/n9071690.htm">Ïã¸ÛTVBÑÝÔ±ÔøÊØÃ÷â§ÊÅ ÖÕÄê58Ëê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/13/12/16/n4035857.htm">Ïã¸ÛTVB°ä½±Àñ ÌïÈïÄÝ¶áºó »Æ×Ó»ª³ÆµÛ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/12/3/22/n3547413.htm">Ïã¸ÛTVB·½ÒÝ»ªÍËÈÎµçÊÓ¹ã²¥¸±Ö÷Ï¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/11/12/8/n3451500.htm">Ïã¸ÛTVB°ÙËêÉÛÒÝ·òÄêµ×ÍËÐÝ ÁºÄËÅô¼ÌÈÎ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/11/11/21/n3436484.htm">Ïã¸ÛTVBÌ¨ÇìÈ±ÁùÊå ÈÇÍâ½ç´§²â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/10/3/12/n2842835.htm">Ïã¸ÛTVB´óµØÕð ³ÂÖ¾ÔÆ5ÈËÉæÌ°ÎÛ±»²¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/10/1/13/n2784998.htm">Ïã¸ÛTVBÐÂÎÅ±»Åú×ÔÎÒÉó²é</a></li>
-> <li><a href="http://www.epochtimes.com/gb/9/2/12/n2427614.htm">Ïã¸ÛTVBÐû²¼²ÃÔ±Ô¼50ÈË</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721469.htm">¡¾¿ìÑ¶¡¿´¨ÆÕ£ºÒÑÕ÷µÄ25%¶Ô»ª¹ØË°²»±ä ÆäÓà¼õ°ë</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11720459.htm">º£·ç£ºÖÐ¹ú¹Ù³¡Ó­À´¡°´ÇÖ°³±¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11720180.htm">¡¾Í¶Êé¡¿×ÔÓÉÃÅÊ¹ÓÃÐ¡¼¼ÇÉ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721564.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©Ã³Ð­ÖØ´óÈÃ²½ ÃÀÖÐÍÑ¹³³ÖÐø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693541.htm">¡¾²Å×Ó¼ÑÈË¡¿Í³¾ü20ÍòµÄÊé·¨¼ÒÑÕÕæÇä</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690587.htm">ÂÖ»ØÖÐ¡°ÎÒÊÇË­¡±£¿Ç°ÊÀÎªÉ® ½ñÉúÎª¹Ù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11704999.htm">µÃÌì·öÓÓÇ¬Â¡µÛÊé·¨ÒÕÊõ Í¸Â¶Ê²Ã´Ñ¶Ï¢£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707306.htm">ÅÌµãÄÇÐ©ÓëµÛÍõ½«ÏàÓÐ¹ØµÄÃÀÊ³£¨ÉÏ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11715921.htm">ÐíÃÏÕÜÐû²¼½á»é ÌðÂ§ÕÔÃÏ×Ëº°¡°ÐíÌ«Ì«¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719148.htm">ÕÔÞ±ÕÉ·ò»ÆÓÐÁú±»ÆðËß ¸ÛÃûæÂ²ÌÒ»·ï×·ÌÖ¾Þ¿î</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11718879.htm">ÔìÐÍÄ£·Â»¨Ç§¹Ç Ð»ÄÈº°»°ÕÔÀöÓ±£ºÐø¼¯ÎÒ½ÓÑÝ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11715573.htm">ÈðµäÀÖÍÅRoxetteÖ÷³ª²¡ÊÅ ÏíÊÙ61Ëê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719387.htm">·¶±ù±ùÉ¹ÔÚÃÀ¹¤×÷ÊÓÆµ Ôç²Í³ÔÈý¿ÅÔæÎª¼õ·Ê£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719012.htm">¡¾ÐÂÎÅ¿´µã¡¿ÁÖÖ£½ÓÁ¬±»´òÁ³ ±±¾©¸ÃÏëÏëÁË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707277.htm">¡¾Èý¹úÓ¢ÐÛ¡¿Ö®¾Å£ºººÏ×µÛ¶«¹éÂåÑô</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721565.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀ¸ß¹Ù£º±±¾©ÒÔµÐÒâ»ØÓ¦ÃÀÉÆÒâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11718851.htm">ÏÃÃÅµØÌúµØÃæËúÏÝ 2³µ×¹Èë ´óÁ¿»ýË®Ó¿Èë</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/9/n11711264.htm">ÖÐ¹²Ì¬¶È·´¸´ ÈÎÕý·Ç¼Ò×åÐÎÏó¿ìËÙ±ÀÀ£</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719209.htm">ÃÀÖÐÔ­ÔòÉÏ´ï³ÉµÚÒ»½×¶ÎÐ­Òé</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/9/2/12/n2427614.md#1">é¦™æ¸¯TVBå®£å¸ƒè£å‘˜çº¦50äºº</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/10/1/13/n2784998.md#1">é¦™æ¸¯TVBæ–°é—»è¢«æ‰¹è‡ªæˆ‘å®¡æŸ¥</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/10/3/12/n2842835.md#1">é¦™æ¸¯TVBå¤§åœ°éœ‡ é™ˆå¿—äº‘5äººæ¶‰è´ªæ±¡è¢«æ•</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/11/11/21/n3436484.md#1">é¦™æ¸¯TVBå°åº†ç¼ºå…­å” æƒ¹å¤–ç•Œæ£æµ‹</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11721543.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308535.md#1" target="_blank">é‡‘é›ï¼šâ€œæ—¢å¾—åˆ©ç›Šè€…â€ä½•ä»¥æˆä¸ºåå¯¹è‹ç»´åŸƒçš„å…ˆé”‹?</a></li><li><a href="https://github.com/eyk232/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385671.md#1" target="_blank">å«åˆ°éŸ©å›½çš„ä¸­å›½åª³å¦‡ï¼šå®ˆä½å–„å°±èƒ½èµ°å‡ºå›°å¢ƒ</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/16/n11945071.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å®˜åª’å¿™é™æ¸©ï¼Ÿèµµç«‹åšåŠäº”æ¯›è¢«æ‰“è„¸</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/16/n11943071.md#1">ã€çŽ°åœºè§†é¢‘ã€‘æ­¦æ±‰åŒ»ç”Ÿæ­ä¸­å…±å…³é—­æ–¹èˆ±å†…å¹•</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/15/n11942229.md#1">å¤§é™†åŽŸå«ç”Ÿé«˜å®˜ï¼šç–«æƒ…æå†çˆ†å‘ è°Žè¨€å°†ç ´ç­</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/15/n11942675.md#1">ä»»å¿—å¼ºå¤±è”4å¤© å…¶å¥½å‹æ±‚æ•‘å¤–åª’å‘ä¸­å…±æ–½åŽ‹</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/16/n11945291.md#1">è“¬ä½©å¥¥ä¸Žæ¨æ´ç¯ªé€šè¯ æ­£å‘ŠåŒ—äº¬å‹¿æ•£æ€ªè¯žè°£è¨€</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/17/n11946544.md#1">å°æ­Œä»”æˆå›½å®å°å‡¤ä»™ç—…é€ äº«å¯¿80å²ã€€</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹æ–°å† ç—…æ¯’</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/16/n11945468.md#1">èµµä¸½é¢–å¤å·¥æ™’ç‰‡åœºç…§ åŠè¶…é«˜å¨äºšåŽ‹æ ¹çœ‹ä¸åˆ°äºº</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/11/n11933369.md#1">æ¸…æœå­¦å£«ä¸‰å¥‡æ¢¦ æ˜¯è°æŽŒæ¡ä»–çš„ä¸€ç”Ÿï¼Ÿ</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/1/2/n11764074.md#1">ä»–ä»¬èº«ä¸Šçš„æ¯’ç–® åŽŸæ¥æ˜¯å¤™æ€¨</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/13/1/31/n3790016.md#1">ç±³å¼€æœ—åŸºç½—Michelangeloï¼ˆ1ï¼‰æ—©å¹´ç”Ÿæ¶¯</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/7/n11923201.md#1">ã€åŽ†å²å›žçœ¸ã€‘æŠµæŠ—æžæƒ æœ€ç®€å•çš„æ–¹æ³•æ˜¯æ‹’ç»è¯´è°Ž</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/6/n11920418.md#1">çº¿æ¡é­”æœ¯å®¶  ç™½æå¤§å¸ˆæŽå…¬éºŸå’Œäº”é©¬å›¾</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/eyk232/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/eyk232/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/13/n11721543.htm">ä¼ é¦™æ¸¯TVBæœˆåº•è£å‘˜è¿‘åƒ èŠ‚ç›®åˆ¶ä½œéƒ¨å å¤§å¤´</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/eyk232/djy/blob/master/gb/19/12/13/n11721543.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/eyk232/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/eyk232/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/eyk232/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
