--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080175.md#1" title="疫情“隔离”下 美国人如何给我女儿过生日""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/IMG_2614-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081951.md#1" title="【直播回放】5.4疫情追踪：中国南北爆疫情""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/download-12-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/eyk232/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://eyk232.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/25/n11974588.md#1">持续更新：亚省“中共病毒”疫情一览</a><br>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082609.md#1">参议员克鲁兹：大瘟疫后 需重估美中关系</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083184.md#1">科技和能源股领涨 美三大股指开低走高</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083129.md#1">王全璋详述冤情：定不了煽颠罪 就定颠覆罪</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083104.md#1">中共长臂深入美国大学 国会议员展开调查</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080385.md#1">【一线采访】疫情下 大陆教育培训业关店频</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/25/n11974588.md#1">持续更新：亚省“中共病毒”疫情一览</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082609.md#1">参议员克鲁兹：大瘟疫后 需重估美中关系</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083184.md#1">科技和能源股领涨 美三大股指开低走高</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083129.md#1">王全璋详述冤情：定不了煽颠罪 就定颠覆罪</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083104.md#1">中共长臂深入美国大学 国会议员展开调查</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080385.md#1">【一线采访】疫情下 大陆教育培训业关店频</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079946.md#1">中共四分钟歌曲激怒亚洲民众 20万人踩</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078982.md#1">【翻墙必看】金正恩露面手腕惊现神秘疤痕</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 355,466,018 人
+!共 355,468,553 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
